DONE - it works, ship it, it's over, it's DONE

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <div class="container">
         <h1>What city are you in?</h1>
-        <label for="location">Enter a location:</label>
+        <h3>Enter a location:</h3>
         <input id="location" type="text">
         <button class="btn-success" id="weatherLocation">Go!</button>
           
@@ -19,6 +19,7 @@
         <div class='resultCircle'> 
           <div id='result'>
             <div class='errors'></div>
+            <div class='icon'></div>
             <div class='showTemp'></div>
             <div class='showHumidity'></div>
           </div>
